# future

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Future.md  Future_en.md  Future文档.md
future/: future.h  helper.h  promise.h  shared_state.h  traits.h  try.h
tests/: future_test.cc  main.cpp
